--- a/test1.html
+++ b/test1.html
@@ -6,5 +6,6 @@
 <body>
 	<h1>This is first commit</h1>
 	<h2>This is second commit</h2>
+	<h3>This is the second command in project 2</h3>
 </body>
 </html>
